adding analysis charts.

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -2023,7 +2023,9 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2182,7 +2184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -2312,7 +2314,7 @@
        "Griffin High School           97.138965          95.265668  "
       ]
      },
-     "execution_count": 145,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2329,10 +2331,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 184,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2364,6 +2364,8 @@
        "      <th>% Passing Math</th>\n",
        "      <th>% Passing Reading</th>\n",
        "      <th>% Overall Passing</th>\n",
+       "      <th>Spending Ranges (Per Student)</th>\n",
+       "      <th>School Size</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2378,6 +2380,8 @@
        "      <td>94.133477</td>\n",
        "      <td>97.039828</td>\n",
        "      <td>95.586652</td>\n",
+       "      <td>&lt;$584</td>\n",
+       "      <td>Medium (1000-2000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Thomas High School</td>\n",
@@ -2390,6 +2394,8 @@
        "      <td>93.272171</td>\n",
        "      <td>97.308869</td>\n",
        "      <td>95.290520</td>\n",
+       "      <td>$630-644</td>\n",
+       "      <td>Medium (1000-2000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Pena High School</td>\n",
@@ -2402,6 +2408,8 @@
        "      <td>94.594595</td>\n",
        "      <td>95.945946</td>\n",
        "      <td>95.270270</td>\n",
+       "      <td>$585-629</td>\n",
+       "      <td>Small (&lt;1000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Griffin High School</td>\n",
@@ -2414,6 +2422,8 @@
        "      <td>93.392371</td>\n",
        "      <td>97.138965</td>\n",
        "      <td>95.265668</td>\n",
+       "      <td>$585-629</td>\n",
+       "      <td>Medium (1000-2000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>Wilson High School</td>\n",
@@ -2426,6 +2436,8 @@
        "      <td>93.867718</td>\n",
        "      <td>96.539641</td>\n",
        "      <td>95.203679</td>\n",
+       "      <td>&lt;$584</td>\n",
+       "      <td>Large (2000-5000)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2453,15 +2465,22 @@
        "Griffin High School              83.816757       93.392371          97.138965   \n",
        "Wilson High School               83.989488       93.867718          96.539641   \n",
        "\n",
-       "                     % Overall Passing  \n",
-       "Cabrera High School          95.586652  \n",
-       "Thomas High School           95.290520  \n",
-       "Pena High School             95.270270  \n",
-       "Griffin High School          95.265668  \n",
-       "Wilson High School           95.203679  "
+       "                     % Overall Passing Spending Ranges (Per Student)  \\\n",
+       "Cabrera High School          95.586652                         <$584   \n",
+       "Thomas High School           95.290520                      $630-644   \n",
+       "Pena High School             95.270270                      $585-629   \n",
+       "Griffin High School          95.265668                      $585-629   \n",
+       "Wilson High School           95.203679                         <$584   \n",
+       "\n",
+       "                            School Size  \n",
+       "Cabrera High School  Medium (1000-2000)  \n",
+       "Thomas High School   Medium (1000-2000)  \n",
+       "Pena High School          Small (<1000)  \n",
+       "Griffin High School  Medium (1000-2000)  \n",
+       "Wilson High School    Large (2000-5000)  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3627,7 +3646,9 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
